# Peperoncino

./: .gitignore  README.md  package-lock.json
backend/: README.md  __main__.py  backend.py  pyproject.toml  requirements.txt
backend/default_files/: lampaweeena weeeopen.gcode  lampaweeena.gcode
backend/src/peperoncino_backend/: .env  __init__.py  __main__.py  cli.py  consts.py  gcode.py  gcode2img.py  lib.py  server.py
docs/usability testing/: testing.md
firmware/: platformio.ini
firmware/include/: comms.h  consts.h  gcode.h  plotter.h  server.h
firmware/src/: comms.cpp  gcode.cpp  main.cpp  plotter.cpp  server.cpp
frontend/: README.md  index.html  main.py  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/: App.vue  index.html
frontend/src/assets/: base.css  main.css
frontend/src/components/: JobCard.vue  JobsList.vue  Queue.vue  SerialPortPanel.vue  SettingsPanel.vue
frontend/static/: main.js
