[project]
name = "peperoncino-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Basile",email = "59255877+parmigggiana@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[project.optional-dependencies]
cli = [ "typer>=0.15.2", "tqdm (>=4.67.1,<5.0.0)" ]
server = [ "fastapi>=0.68.0", "uvicorn>=0.15.0", "python-multipart (>=0.0.20,<0.0.21)" ]

[tool.poetry]
packages = [{include = "peperoncino_backend", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cli =  'peperoncino_backend:main_cli'
server = 'peperoncino_backend:main_server'